# cffc_plat_pub

./: Cargo.toml  README.md
bm_imp/: Cargo.toml  cfg.json
bm_imp/src/: cfg.rs  dir_filter.rs  error.rs  lib.rs  main.rs  util.rs
bm_imp/src/services/: create_person.rs  detect.rs  mod.rs  save_db.rs  signal_proc.rs  stage_stat.rs
bm_tool/: Cargo.toml  create_src.json
bm_tool/src/: dao.rs  error.rs  imp_src_cmd.rs  main.rs  reset_cmd.rs
bm_worker/: Cargo.toml  camera.json  cfg.json
bm_worker/src/: app_cfg.rs  app_ctx.rs  error.rs  lib.rs  main.rs  queue_item.rs
bm_worker/src/dao/: mod.rs  model.rs  web_dao.rs
bm_worker/src/services/: ent_bus.rs  mod.rs  signal_proc.rs  track_clean.rs
bm_worker/src/services/car/: car_judge.rs  car_notify.rs  mod.rs  spool_async.rs
bm_worker/src/services/face/: face_judge.rs  face_notify.rs  face_search.rs  mod.rs  spool_async.rs
bm_worker/src/services/ws/: agent.rs  mod.rs  session.rs  worker.rs
bm_worker/src/web/: api_auth.rs  mod.rs  router.rs  server.rs
bm_worker/src/web/controllers/: admin_ctl.rs  camera_ctl.rs  cartrack_ctl.rs  coi_ctl.rs  crop_ctl.rs  facetrack_ctl.rs  getsingleimg.rs  home_ctl.rs  logon.rs  mod.rs  notify_handle.rs  poi_ctl.rs
bm_worker/src/web/proto/: admin.rs  camera.rs  cartrack.rs  coi.rs  facetrack.rs  mod.rs  poi.rs
bm_worker/src/web/svc/: camera_svc.rs  cartrack_svc.rs  coi_svc.rs  facetrack_svc.rs  mod.rs  poi_svc.rs
bm_worker/static/css/: umi_index.css  umi_main.css
bm_worker/static/js/: umi_index.js  umi_main.js
bm_worker/views/: index.tpl  main.tpl
cffc_base/: Cargo.toml
cffc_base/src/: lib.rs
cffc_base/src/api/: bm_api.rs  lane.rs  mod.rs
cffc_base/src/db/: dbop.rs  mod.rs
cffc_base/src/model/: img_file.rs  mod.rs  returndata.rs
cffc_base/src/util/: delay_queue.rs  intr_queue.rs  intr_seg_queue.rs  logger.rs  mod.rs  multipart_form.rs  serial_process.rs  utils.rs
doc/data/: gen_model.sh  sqlite_init.sh
doc/deploy/: bm_worker.service  cfbm.db  install_bm_app.sh  install_x86_app.sh  logrotate.conf
doc/deploy/tools/: after_install.sh  before_install.sh  clean_for_boxapp.sh  extract_icache.sh  gen_offline.sh  icache.sh  install_bm_api.sh  install_bm_api_offline.sh  update_se5.sh
