[package]
name = "bm_imp"
version = "0.1.0"
authors = ["tom <twm@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cffc_base = { version = "0.1.0", path = "../cffc_base" }
bm_worker = { version = "0.1.0", path = "../bm_worker" }

openssl = { version = "0.10", features = ["vendored"] }
log4rs = "0.13.0"
log = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.58", features = ["preserve_order"] }

clap = "2.33.3"

rusqlite = { version = "0.24.1", features = ["bundled", "chrono"] }

chrono = { version = "0.4", features = ["serde"] }
signal-hook = "0.1.16"

uuid = { version = "0.8", features = ["serde", "v4"] }

tokio = { version = "0.2.22", features = ["full"] }
base64 = "0.13.0"

deadqueue = "0.1.0"
regex = "1.4.2"

http = "0.2.1"
bytes = "0.5.6"
lazy_static = "1.4.0"

reqwest = { version = "0.10", features = ["json"] }
jsonrpc-core = "15.1.0"